--- a/org/2020-04-25-java-concurrency.org
+++ b/org/2020-04-25-java-concurrency.org
@@ -977,5 +977,5 @@ Atomic»¹¿ÉÒÔÖ±½ÓÓÃÓÚ´æ´¢±ÈÈç»ùÓÚÁ´±íµÄ¸÷ÏîÊı¾İ½á¹¹£¬±ÈÈçStack£¬QueueµÈ(ĞèÒªÊ¹ÓÃÒ
 ÔÚÊ¹ÓÃCASÊ±£¬Êı¾İÓë¾ÉÊı¾İÒ»ÖÂ£¬µ«ÊÇÖĞÍ¾ÊÇ·¢Éú¹ı±ä»¯ºó²ÅÇĞ»»»ØÀ´µÄ£¬¿ÉÒÔÍ¨¹ı¼ÓÊ±¼ä´ÁÀ´½â¾ö
 AtomicStampedReference (and its cousin AtomicMarkableReference)
 * JMM
-* code resources
-https://github.com/yjfox/-Java-Concurrency-in-Practice-Source-Code
+* backpressure
+https://medium.com/@jayphelps/backpressure-explained-the-flow-of-data-through-software-2350b3e77ce7
