--- a/org/2020-10-26-oauth2.org
+++ b/org/2020-10-26-oauth2.org
@@ -25,7 +25,10 @@ http://localhost:56789/oauth2/authorization/github
 * ref
 https://160668873.gitbook.io/tkey-docs/ren-shi-jie-duan-bi-du/tkey-baisc //基本概念
 * core
+** 根本原因
 不跨域不存在单点登录问题；
 非浏览器端不存在单点登录问题；
 浏览器跨域解决单点登录的方法就只有：redirect，cors
 什么session，什么令牌，这些都是登录问题，不是单点登录问题。
+** state参数
+https://stackoverflow.com/questions/35985551/how-does-csrf-work-without-state-parameter-in-oauth2-0x
