--- a/org/2021-03-15-db-client.org
+++ b/org/2021-03-15-db-client.org
@@ -3,6 +3,8 @@
 * dbeaver
 ** mock enum
 expression = VALID|INVALID
+** activate
+https://zhile.io/2019/05/08/dbeaver-license-crack.html
 * navicat
 
 注册机，本地伪装注册破解器(离线不离线无所谓)
