--- a/org/2021-06-11-os.org
+++ b/org/2021-06-11-os.org
@@ -152,9 +152,6 @@ decode后的真值是单位矩阵，事实上可以通过设计让其不以单位矩阵的形式呈现
 11111101+(11111111-10110000)(inverter)+1-100000000
 ==>
 (11111101+01001111+1)(加法机一定会进位，进位拿去当underflow的信息，与sub作xor gate，拿来作报警，相当于-100000000可以不用算)
-
-
-
 ** 加法机(数值存在符号，由第一位确定)
 ***  ten’s complement
 该做法的范围内的语义完全对应上，而进位可以直接无视
@@ -202,3 +199,24 @@ mapping转换机制，位数的最大值在+1，即-125，数值部分01111101反转10000010在加1即10
 10000011+10000011=100000110 进位了
 01111101+01111101=11111101 
 上述都属于溢出，可以观察到通用的部分即符号变味，因此，以输入源最高位的两个信号配合最终结果的信号，如果两个输入同符号且最终结果和该符号不同，即代表越界(不同符号一定是落在bit区间内，如-1+127=11111111+01111111=101111110，去掉进位即为126)
+* 内存
+以flip-flop为核心
+
+第一步，一个flip-flop处理后(剪线)后，并在前置电路处理后，可以变成一个latch，存储一个bit
+[[file:~/study-record/img/flip_flop_latch.png][latch circuit]] --> [[file:~/study-record/img/flip_flop_latch_short.jpg][symbol]]
+
+第二步，让一个write信号控制多个latch
+[[file:~/study-record/img/eight_latch_with_same_latch.png][eight latch box circuit]] --> [[file:~/study-record/img/eight_latch_with_same_latch_symbol.png][symbol]]
+
+第三步，引入地址的概念
+以存在65536(2^16)个latch的情况下，假设只有一个bit线的输出，那么就是需要一个外部控制信号，决定最终的输出信号是哪个latch的，所以该情况需要16根线(地址线)，每次输入一个地址，可以拿到对应的latch的bit数目
+
+第四步，拓展位宽
+上一步只能输入1bit，如果要输入8bit，以简单的思想实验就是上述的latch集合作为一块电路板子，使用8块板子，在一一对应的情况下，地址线从每次板子的对应处取出一个bit，总计8bit=1byte
+
+第五步，拓展容量
+在上述第四步，有些东西已经很明显，即如果8bit输出固定，那么能在通电情况下保存信息的大小取决于板子latch的数目(地址总数取决于需要控制的总latch)，竖着排可以增加位宽，那么平着排就可能进行latch板子的扩大(逻辑概念)
+* 指令集
+以电路来变更门的状态，进而实现对应的算术逻辑
+[[file:~/study-record/img/8080_cpu.png][8080 cpu]]
+可以看到A0~A15是作为地址总线来输入，而D0~D7则是作为双向数据流，根据地址总线触发内存，输出的8bit，或者反过来写回去，内部的结构根据
